Testing/Fixed Testing and add Additional Tests